--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>336 Tagged Open Ruby Bugs as of 2022-06-15 04:54:55 +0900</title>
+<title>338 Tagged Open Ruby Bugs as of 2022-06-16 00:24:37 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -32,9 +32,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">336</span> matched)
+(<span id="matched">338</span> matched)
 <table>
-<caption>336 Tagged Open Ruby Bugs as of 2022-06-15 04:54:55 +0900</caption>
+<caption>338 Tagged Open Ruby Bugs as of 2022-06-16 00:24:37 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -43,6 +43,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18829">18829</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18829">GC_COMPACTION_SUPPORTED macro should be set and detected automatically.</a>
+</td>
+</tr>
 <tr class=" patch encoding ">
 <td><a href="https://bugs.ruby-lang.org/issues/18827">18827</a>
 </td>
@@ -195,6 +202,13 @@
 </td>
 <td>autoload</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18782">Race conditions in autoload when loading the same feature with multiple threads.</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18780">18780</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18780">Incorrect binding receiver for C API rb_eval_string()</a>
 </td>
 </tr>
 <tr class=" patch core ">
